# contexter

./: .gitignore  Cargo.toml  README.md  SERVER.md
chrome-extension/: EXTENSION.md  jest.config.js  manifest.json  package-lock.json  package.json  popup.html  settings.html  webpack.config.js
chrome-extension/.github/workflows/: ci.yml
chrome-extension/scripts/: background.js  popup.js  settings.js  shared.js
chrome-extension/styles/: common.css  popup.css  settings.css  styles.css
chrome-extension/tests/: popup.test.js
server/: Cargo.toml
server/src/: cli_handlers.rs  config.rs  contexter.rs  main.rs  server.rs
server/tests/: api_key_tests.rs  contexter_tests.rs  integration_tests.rs
src/: cli.rs  cli_handlers.rs  config.rs  contexter.rs  lib.rs  main.rs  server.rs  server_handlers.rs  utils.rs
tests/: api_key_tests.rs  contexter_tests.rs  integration_tests.rs  server_tests.rs  tests.rs
