[package]
name = "contexter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
clipboard-anywhere = "0.2.3"
clap = { version = "4.5.11", features = ["derive"] }
tempfile = "3.2.0"
ignore = "0.4.17"

