[package]
name = "contexter"
version = "0.1.0"
edition = "2021"


[dependencies]
glob = "0.3.1"
clipboard-anywhere = "0.2.3"
clap = { version = "4.5.11", features = ["derive"] }
tempfile = "3.10.1"
ignore = "0.4.22"
regex = "1.10.5"
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0"
actix-web = "4.8.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
structopt = "0.3.26"
